@@ -46,20 +46,6 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
          directory: ./gremlin-tools/gremlin-coverage/target/site
-  java-jdk8:
-    name: mvn clean install - jdk8
-    timeout-minutes: 45
-    needs: smoke
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 8
-        uses: actions/setup-java@v4
-        with:
-          java-version: '8'
-          distribution: 'temurin'
-      - name: Build with Maven
-        run: mvn clean install -pl -:gremlin-javascript -Dci --batch-mode -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
   gremlin-server-default:
     name: gremlin-server default
     timeout-minutes: 45
